correcciones en el back